package com.autohubstore.gateway.model;

public record RateLimitKey(String key, boolean authenticated) {

}
