%% API Gateway — sem banco de dados próprio (stateless, roteamento).
%% Estruturas em memória/Redis relevantes ao domínio do Gateway, documentadas como
%% "entidades" para fins de diagrama, sem persistência relacional.
erDiagram
    JWT_CLAIMS {
        string userId "subject do JWT"
        string email
        string roles "lista de papeis, ex CUSTOMER"
    }
    RATE_LIMIT_KEY {
        string key "IP ou userId, concatenado com o path"
        boolean authenticated "define limite 100 ou 200 req-min"
    }
    SERVICE_ROUTE_DEFINITION {
        string serviceId
        string pathPrefix "predicado Path=/api/v1/xxx/**"
        string serviceUrl "lb://servico ou URL fixa"
    }

    JWT_CLAIMS ||--o{ RATE_LIMIT_KEY : "identifica usuário autenticado para"
    SERVICE_ROUTE_DEFINITION ||--o{ RATE_LIMIT_KEY : "aplica limite por"
